<?xml version="1.0" encoding="utf-8"?>
<!--
 ! Excerpted from "Programming Google Glass, Second Edition",
 ! published by The Pragmatic Bookshelf.
 ! Copyrights apply to this code. It may not be used to create training material, 
 ! courses, books, articles, and the like. Contact us if you are in doubt.
 ! We make no guarantees that this code is fit for any purpose. 
 ! Visit http://www.pragmaticprogrammer.com/titles/erpgg2 for more book information.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/left_column"
        android:layout_width="@dimen/glass_card_column_width"
        android:layout_height="@dimen/glass_card_body_height"
        android:layout_marginStart="@dimen/glass_card_margin"
        android:layout_marginTop="@dimen/glass_card_margin"
        >

        <ProgressBar
            android:id="@+id/battery_level"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/img_battery"
            android:max="100"
            android:paddingTop="5dp"
            android:progress="100"
            android:progressDrawable="@drawable/battery_level" />

        <TextView
            android:id="@+id/battery_voltage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:text="@string/battery_voltage" />

        <TextView
            android:id="@+id/battery_degrees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/battery_voltage"
            android:gravity="end"
            android:text="@string/battery_degrees" />

        <ImageView
            android:id="@+id/img_battery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/img_battery"
            android:src="@drawable/img_battery" />
        
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/right_column"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/glass_card_body_height"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="@dimen/glass_card_margin"
        android:layout_marginTop="@dimen/glass_card_margin"
        android:layout_toEndOf="@+id/left_column"
        tools:ignore="UselessLeaf" >

        <TextView
            android:id="@+id/language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:ellipsize="end"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/language" />

        <TextView
            android:id="@+id/country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/language"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:ellipsize="end"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/country" />

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/country"
            android:layout_marginTop="19dp"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/time" />
        
    </RelativeLayout>

    <LinearLayout
         android:id="@+id/footer_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/left_column"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_gravity="bottom|start"
         android:layout_marginBottom="@dimen/glass_card_footer_margin"
         android:layout_marginStart="@dimen/glass_card_margin"
         android:layout_toEndOf="@+id/left_column"
         android:orientation="horizontal" >

        <TextView
            android:id="@+id/connected"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            />

        <ImageView
            android:id="@+id/wifi_strength"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:contentDescription="@string/wifi_strength"
            android:src="@drawable/ic_wifi_1" />

        <ImageView
            android:id="@+id/stats_icon_view"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:contentDescription="@string/stats_icon_view"
            android:src="@drawable/ic_gear_50" />

    </LinearLayout>

</RelativeLayout>
